# Cortex

./: .gitignore  Netie_Cortex_v1_Architecture.docx  Netie_Cortex_v2_Strategic_Architecture.docx  README.md  competitive_analysis.md  extract_docx.py  hls_err.txt  implementation_plan.md  pyproject.toml  scaffold.py  task.md  test_hls.txt  test_hls2.txt  test_out.txt  test_out2.txt  v1_arch.txt  v2_arch.txt
myenv/Scripts/: activate  activate.bat  dul-receive-pack  dul-upload-pack
netie/: config.py  result.py
netie/crypto/: ephemeral_keys.py
netie/fabrication/: dag_compiler.py  dsl_parser.py  hls_compiler.py  manifest.py  skill_registry.py  skillmesh.py
skills/: _schema.yaml  api_call.yaml  code_execution.yaml  data_extraction.yaml  file_operations.yaml  summarization.yaml  web_search.yaml
tests/: conftest.py  test_config.py
tests/test_fabrication/: test_dag_compiler.py  test_dsl_parser.py  test_hls_compiler.py  test_manifest.py  test_skill_registry.py  test_skillmesh.py
